force-app/main/default/objects/bpats__ATS_Template_Filter__c/bpats__ATS_Template_Filter__c.object-meta.xml
<CustomObject>
    <label>ATS Template Filter</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Template Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATS Template Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>