force-app/main/default/objects/bpats__ATS_Template_Filter__c/fields/bpats__ATS_List_Filter__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_List_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATS List Filter</label>
    <referenceTo>bpats__ATS_List_Filter__c</referenceTo>
    <relationshipLabel>ATS Template Filters</relationshipLabel>
    <relationshipName>ATS_Template_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>