force-app/main/default/objects/bpats__ATS_Template_Filter__c/fields/bpats__Interview_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Template</label>
    <referenceTo>bpats__Interview_Template__c</referenceTo>
    <relationshipLabel>ATS Template Filters</relationshipLabel>
    <relationshipName>ATS_Template_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>