force-app/main/default/objects/bpats__ATS_Template_Filter__c/fields/bpats__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>