force-app/main/default/objects/bpats__ATS_Template_Filter__c/fields/bpats__Operator__c.field-meta.xml
<CustomField>
    <fullName>bpats__Operator__c</fullName>
    <label>Operator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>