force-app/main/default/objects/bpats__ATS_Template_Filter__c/fields/bpats__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>bpats__Target_Field__c</fullName>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>