force-app/main/default/objects/bpats__ATS_Template_Filter__c/fields/bpats__Value__c.field-meta.xml
<CustomField>
    <fullName>bpats__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>